--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <h3 class="header__profile-1-title">Professional </br> <span></span> profile</h3>
         </div>
         <div class="header__profile-2">
-          <p class="header__profile-2-paragraph">Retail professional with more than 6 years experience in retail and business support. Self-educated front-end developer. Editor of two books and author of several online book critics.
+          <p class="header__profile-2-paragraph">Retail professional with more than 6 years of experience in retail and business support. Self-educated front-end developer. Editor of two books and author of several online book critics.
           </p>
         </div>
       </div>
@@ -189,7 +189,7 @@
 
                 <div class="job__container-text">
                   <div class="job__container-text-free">
-                    Supervising the operational and organizational standards of the store including workforce planning, orderig, inventory levels monitoring.
+                    Supervising the operational and organizational standards of the store including workforce planning, orderig and inventory levels monitoring.
                   </div>
                   <div class="job__container-text-list">
                     <ul class="first-list">
@@ -252,7 +252,7 @@
 
                 <div class="job__container-text">
                   <div class="job__container-text-free">
-                    I was responsible for the global operation of Central CCTV processes for 69 Hypermarkets. I had been planning and supervising the deployment, installation and replacement of all the in-store security equipment throughout the country.
+                    I was responsible for the global operation of Central CCTV processes for 69 Hypermarkets. I planned and supervised the deployment, installation and replacement of all the in-store security equipment throughout the country.
                   </div>
                   <div class="job__container-text-list">
                     <ul>
@@ -286,7 +286,7 @@
 
                 <div class="job__container-text">
                   <div class="job__container-text-free">
-                    I joined TESCO Graduate Program as a CS Manager and Commercial Manager Trainee. After the program I applied to a Poject Coordinator position in TESCO Head Office. During the company's reorganization I had been working as a Customer Insight Analyst within the Marketing team.
+                    I joined TESCO Graduate Program as a CS Manager and Commercial Manager Trainee. After the program I applied to a Poject Coordinator position in TESCO Head Office. During the company's reorganization I worked as a Customer Insight Analyst within the Marketing team.
                   </div>
                   <div class="job__container-text-list">
                     <ul>
