--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <h3 class="header__profile-1-title">Professional </br> <span></span> profile</h3>
         </div>
         <div class="header__profile-2">
-          <p class="header__profile-2-paragraph">Retail professional with more than 6 years of experience in retail and business support. Self-educated front-end developer. Editor of two books and author of several online book critics.
+          <p class="header__profile-2-paragraph">Retail professional with more than 6 years of experience in retail and business support. Self-educated front-end developer. Editor of two books and author of several online book reviews.
           </p>
         </div>
       </div>
